--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ p {
 }
 
 .subContainer {
-  max-width: 700px;
+  max-width: 500px;
 }
 
 .btnContainer {
@@ -37,15 +37,16 @@ p {
   text-align: center;
 }
 
-.inputsContainer {
-  display: flex;
+.display {
+  text-align: right;
 }
 
-.inputs {
-  max-height: 30px;
-  max-width: 40px;
-  background-color: silver;
-  color: black;
+.calcContainer {
+  padding: 1rem;
+}
+
+.ui.button {
+  min-width: 70px;
 }
 
 /* 
