--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,34 @@
+/* 
+font-family: 'Fira Sans', sans-serif;
+font-family: 'Work Sans', sans-serif;
+font-family: 'Shanti', sans-serif;
+*/
+
+body {
+  font-family: "Shanti", sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Fira Sans", sans-serif;
+}
+
+h4,
+h5,
+h6,
+li {
+  font-family: "Work Sans", sans-serif;
+}
+
 li {
   list-style-type: none;
   display: inline;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 nav {
