--- a/Calc/calc.css
+++ b/Calc/calc.css
@@ -18,6 +18,15 @@ p {
   font-size: 16px;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  color: inherit;
+}
+
 .ui.button {
   min-width: 100.01px;
 }
