--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ h6 {
 header {
   text-align: center;
   opacity: 0.9;
+  margin-bottom: 4rem;
 }
 
 li {
@@ -53,7 +54,7 @@ nav {
 }
 
 section {
-  margin: 2rem auto;
+  margin: 2rem auto 4rem;
   max-width: 800px;
 }
 
@@ -78,13 +79,24 @@ hr {
 
 .navLinks {
   font-size: 1.3rem;
+  display: flex;
+}
+
+.navItem {
+  transition: 0.3s ease-in-out;
+  margin: 0 1.5rem;
+}
+
+.navItem:hover {
+  transform: scale(1.3);
 }
 
 .footerContainer {
   text-align: center;
+  margin-top: 8rem !important;
   min-height: 100px;
   display: flex;
-  background-image: linear-gradient(to right, #16afa0, #37c6b8) !important;
+  background-image: linear-gradient(to right, #16afa0, #09897a) !important;
 }
 
 .footerContent {
@@ -109,5 +121,9 @@ hr {
 
   .navLinks {
     font-size: 1rem;
+  }
+
+  .navItem {
+    margin: 0 1rem;
   }
 }
