--- a/styles/home.css
+++ b/styles/home.css
@@ -1,32 +1,58 @@
-.separator {
-  border-top: 16px dotted #01c4b4;
-  width: 60px;
-  margin: 3rem auto 0;
+h1 {
+  text-align: center;
 }
 
 .headerDescription {
   margin: 1.5rem auto 0;
-  max-width: 800px;
+  max-width: 600px;
   text-align: justify;
+}
+
+.highlight {
+  font-family: "Fira Sans", sans-serif;
+  font-weight: 700;
+  color: #16afa0;
+}
+
+.linkContainer,
+.linkDetail {
+  min-width: 300px;
+  max-width: 600px;
+  margin: auto;
 }
 
 .linkContainer {
   height: 200px;
-  min-width: 400px;
   display: flex;
   color: white;
+  text-shadow: 1px 2px white;
   justify-content: center;
   background-image: linear-gradient(to right, #16afa0, #37c6b8);
   font-family: "Shanti", sans-serif;
   font-size: 4rem;
-  border-radius: 10px;
+  border: 0.5px solid black;
 }
 
 .linkDetail {
   text-align: justify;
-  padding: 1rem 0;
+  padding: 2rem 0;
 }
 
 .linkContent {
   align-self: center;
+  transition: 0.3s ease-in-out;
+}
+
+.linkContent:hover {
+  transform: scale(1.3);
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  body {
+    font-size: 1rem;
+  }
 }
