fixed css hover and initial styling for project css

--- a/styles/home.css
+++ b/styles/home.css
@@ -23,14 +23,9 @@ h1 {
 
 .linkContainer {
   height: 200px;
-  display: flex;
-  color: white;
-  text-shadow: 1px 2px white;
-  justify-content: center;
   background-image: linear-gradient(to right, #16afa0, #37c6b8);
-  font-family: "Shanti", sans-serif;
-  font-size: 4rem;
   border: 0.5px solid black;
+  overflow: hidden;
 }
 
 .linkDetail {
@@ -39,12 +34,19 @@ h1 {
 }
 
 .linkContent {
-  align-self: center;
+  line-height: 200px;
+  text-align: center;
+  vertical-align: middle;
+  font-family: "Shanti", sans-serif;
+  font-size: 2.5rem;
+  text-shadow: 1px 2px rgb(192, 192, 192);
+  color: white;
   transition: 0.3s ease-in-out;
 }
 
 .linkContent:hover {
   transform: scale(1.3);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
