--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,12 +83,12 @@ hr {
 }
 
 .navItem {
-  transition: 0.3s ease-in-out;
   margin: 0 1.5rem;
+  transition: 0.3s ease-in-out;
 }
 
 .navItem:hover {
-  transform: scale(1.3);
+  transform: translateY(-3px);
 }
 
 .footerContainer {
