--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,10 +1,22 @@
-.mainContainer {
-  min-height: 616px;
-}
-
 .projectContainer {
   min-width: 300px;
   max-width: 600px;
   margin: auto;
   text-align: justify;
+}
+
+.projectHeader {
+  font-family: "Fira Sans", sans-serif;
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+.projectLink {
+  margin: 1rem auto;
+  padding: 0.5rem 0;
+  border: 0.5px solid #09897a;
+}
+
+.projectBody {
+  font-family: "Work Sans", sans-serif;
 }
