--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@ h6 {
 header {
   text-align: center;
   opacity: 0.9;
-  margin-bottom: 4rem;
+  margin: 2rem auto 4rem;
 }
 
 li {
@@ -53,8 +53,12 @@ nav {
   justify-content: space-between;
 }
 
+article {
+  margin: 2rem 0 4rem;
+}
+
 section {
-  margin: 2rem auto 4rem;
+  margin: 0 auto 4rem;
   max-width: 800px;
 }
 
@@ -68,8 +72,8 @@ pre {
 }
 
 .mainContainer {
-  min-height: 616px;
-  padding: 0 1rem;
+  min-height: 686px;
+  padding: 2rem 1rem;
 }
 
 .navLinks,
@@ -104,7 +108,7 @@ pre {
 
 .footerContainer {
   text-align: center;
-  margin-top: 8rem !important;
+  margin-top: 4rem !important;
   min-height: 100px;
   display: flex;
   background-image: linear-gradient(to right, #16afa0, #09897a) !important;
