--- a/styles/sprint.css
+++ b/styles/sprint.css
@@ -26,3 +26,24 @@
   font-family: "Work Sans", sans-serif;
   text-align: justify;
 }
+
+.test {
+  width: 40px;
+  position: relative;
+}
+
+.test::before {
+  content: "";
+  border-bottom: 3px solid #16afa0;
+  width: 100%;
+  height: 120%;
+  z-index: -1;
+  position: absolute;
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+
+.test:hover::before {
+  height: 100%;
+  opacity: 1;
+}
