--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,10 +100,27 @@ pre {
 
 .navItem {
   margin: 0 1.5rem;
+  position: relative;
+}
+
+.navItem::before {
+  content: "";
+  border-bottom: 3px solid #16afa0;
+  width: 100%;
+  height: 130%;
+  z-index: -1;
+  position: absolute;
+  opacity: 0;
+  transition: all 0.2s ease;
+}
+
+.navItem:hover::before {
+  height: 115%;
+  opacity: 1;
 }
 
 .navItem:hover {
-  transform: translateY(-3px);
+  transform: translateY(-1px);
 }
 
 .footerContainer {
