--- a/Calc/calc.css
+++ b/Calc/calc.css
@@ -66,3 +66,10 @@ a:hover {
 .btnE {
   width: 204px !important;
 }
+
+@media only screen and (max-width: 600px) {
+  .ui.button {
+    min-width: 68px;
+    font-size: 1rem !important;
+  }
+}
