--- a/styles/sprints.css
+++ b/styles/sprints.css
@@ -41,7 +41,7 @@ h3 {
   transform: scale(1.3);
 }
 
-@media screen and (max-width: 850px) {
+@media only screen and (max-width: 850px) {
   h3 {
     font-size: 1.2rem;
     margin: 0;
@@ -57,8 +57,9 @@ h3 {
   .linkTechnical {
     margin: auto;
     height: 100px;
-    min-width: 370px;
-    max-width: 500px;
+    min-width: auto;
+    max-width: 400px;
+    width: 95%;
     overflow: hidden;
     text-align: center;
     vertical-align: middle;
