--- a/Calc/calc.css
+++ b/Calc/calc.css
@@ -33,6 +33,7 @@ a:hover {
 
 .main {
   padding-top: 220px;
+  transition: all 0.3s ease;
 }
 
 .mainContainer {
@@ -68,6 +69,10 @@ a:hover {
 }
 
 @media only screen and (max-width: 600px) {
+  .main {
+    padding-top: 70px;
+  }
+
   .ui.button {
     min-width: 68px;
     font-size: 1rem !important;
