--- a/styles/sprint.css
+++ b/styles/sprint.css
@@ -9,7 +9,7 @@
   font-family: "Shanti", sans-serif;
   font-size: 2rem;
   text-align: center;
-  margin: 2rem 0;
+  margin: 2rem 0 4rem;
 }
 
 .sTitle,
@@ -25,25 +25,4 @@
 .sBody {
   font-family: "Work Sans", sans-serif;
   text-align: justify;
-}
-
-.test {
-  width: 40px;
-  position: relative;
-}
-
-.test::before {
-  content: "";
-  border-bottom: 3px solid #16afa0;
-  width: 100%;
-  height: 120%;
-  z-index: -1;
-  position: absolute;
-  opacity: 0;
-  transition: all 0.2s ease-in-out;
-}
-
-.test:hover::before {
-  height: 100%;
-  opacity: 1;
 }
