--- a/styles/sprints.css
+++ b/styles/sprints.css
@@ -1,5 +1,8 @@
 h3 {
   text-align: center;
+  text-transform: capitalize;
+  opacity: 0.8;
+  margin-bottom: 1rem;
 }
 
 .sprintContainer {
@@ -44,7 +47,7 @@ h3 {
 @media only screen and (max-width: 850px) {
   h3 {
     font-size: 1.2rem;
-    margin: 0;
+    margin: 0 0 1rem;
   }
 
   .sprintContainer {
