--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,6 +78,8 @@ pre {
 .mainContainer {
   min-height: 686px;
   padding: 2rem 1rem;
+  animation: slide 0.5s ease;
+  animation-fill-mode: both;
 }
 
 .navLinks,
@@ -172,5 +174,16 @@ pre {
   .ui.container {
     margin-left: 0 !important;
     margin-right: 0 !important;
+  }
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0px);
+    opacity: 1;
   }
 }
